cmake_minimum_required(VERSION 3.22)
project(Pr0g3770_f1n4l3 C)

set(CMAKE_C_STANDARD 99)

add_executable(Pr0g3770_f1n4l3 main.c Program.h Create_Profile.c Save_Game.c Load_Game.c Save_Load_FileName.c New_Game.c Useful_Function.c User_Choice.c Skimming.c Murra.c Black_Jack.c Odd_or_Even.c Morra_Cinese.c Continue.c Dice_Game.c Tic_Tac_Toe.c Marble.c Ponte_di_vetro.c Impiccato.c)
